# coding: utf-8
[metadata]
name = Restroom
version = 0.0.1
description = REST API executing Zencode over Zenroom
long_description = file: README.md
long_description_content_type = text/markdown
author = Puria Nafisi Azizi
author_email = puria@dyne.org
project_urls =
    Source Code = https://github.com/DECODEproject/Restroom
    DECODE = https://decodeproject.eu
    Zenroom = https://zenroom.org
python_requires = ~= 3.6
license =
keywords = zenroom crypto-language-processing virtual-machine blockchain crypto ecc dyne ecdh ecdsa zero-knowledge-proofs javascript npm ecp2 miller-loop hamming-distance elgamal aes-gcm aead seccomp goldilocks
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU Affero General Public License v3
    Intended Audience :: Developers
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Security

[options]
packages = find:
setup_requires =
    pytest-runner
install_requires =
    fastapi
    zenroom==1.0.12
    environs==7.1.0

tests_require =
    pytest
    pytest-cov
    codecov

[tool:pytest]
addopts = -rsx --cov=tp.server --tb=short --cov-report term-missing
testpaths = tests

[coverage:run]
source = src

[coverage:report]
show_missing = true

[flake8]
ignore = E501
max-line-length = 99
exclude = .tox,build,docs

[bdist_wheel]
universal = 1

[aliases]
test=pytest
